test/bad/functions/variadic07.px

func f(...args: [Int]): Void def
    return

f(args={3})
